# snapsolid

./: .gitignore  README.md  pyproject.toml
skills/: README.md  snapsolid-check.md  snapsolid.md
snapsolid/: __init__.py  cli.py  config.py  pipeline.py
snapsolid/cleaning/: __init__.py  analyzer.py  base_builder.py  cleaner.py  repair.py  simplify.py  validate.py
snapsolid/core/: base.py
snapsolid/export/: exporter.py
snapsolid/ingest/: quality_gate.py
snapsolid/reconstruction/: apple_capture.py  usdz_converter.py
tests/: test_cleaning.py  test_real_meshes.py
tools/photogrammetry-cli/: Package.swift
tools/photogrammetry-cli/Sources/: main.swift
